chore: add TODO

--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -14,6 +14,7 @@
     // We can't add both `.native` & `.web` at once.
     "moduleSuffixes": [".all", ".web", ""],
     "plugins": [
+      // TODO: Replace ttypescript when official compiler transforms are supported https://github.com/microsoft/TypeScript/issues/54276
       // Transform paths in output .d.ts files
       { "transform": "typescript-transform-paths", "afterDeclarations": true }
     ]
