--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -78,8 +78,8 @@
     "build:clean": "rm -rf build",
     "build:generate-types": "run-s types:generate-types:*",
     "build:copy-declarations": "run-s types:copy-declarations:*",
-    "types:generate-types:web": "ttsc -p ./tsconfig-generate-types.web.json",
-    "types:generate-types:native": "ttsc -p ./tsconfig-generate-types.native.json",
+    "types:generate-types:web": "tspc -p ./tsconfig-generate-types.web.json",
+    "types:generate-types:native": "tspc -p ./tsconfig-generate-types.native.json",
     "types:typecheck:web": "tsc -p ./tsconfig-typecheck.web.json",
     "types:typecheck:native": "tsc -p ./tsconfig-typecheck.native.json",
     "types:copy-declarations:web": "copyfiles -u 1 \"src/**/*.d.ts\" build/types/web",
@@ -114,7 +114,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@babel/runtime": "7.20.0",
+    "@babel/runtime": "7.22.15",
     "@types/body-scroll-lock": "3.1.0",
     "@use-gesture/react": "10.2.24",
     "body-scroll-lock": "4.0.0-beta.0",
@@ -125,12 +125,12 @@
   },
   "devDependencies": {
     "chromatic": "6.22.0",
-    "@babel/core": "7.20.2",
-    "@babel/plugin-transform-react-jsx": "7.16.5",
-    "@babel/plugin-transform-runtime": "7.16.5",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.16.5",
-    "@babel/preset-typescript": "7.16.5",
+    "@babel/core": "7.22.15",
+    "@babel/plugin-transform-react-jsx": "7.22.15",
+    "@babel/plugin-transform-runtime": "7.22.15",
+    "@babel/preset-env": "7.22.15",
+    "@babel/preset-react": "7.22.15",
+    "@babel/preset-typescript": "7.22.15",
     "@codesandbox/sandpack-react": "1.16.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
@@ -223,7 +223,7 @@
     "jsdom-testing-mocks": "1.9.0",
     "postinstall-postinstall": "2.1.0",
     "react-native-safe-area-context": "3.4.1",
-    "ttypescript": "1.5.15",
+    "ts-patch": "3.0.2",
     "typescript-transform-paths": "3.4.6"
   },
   "peerDependencies": {
