ignore ts errors in ThemePlayground

--- a/packages/blade/tsconfig-generate-types.web.json
+++ b/packages/blade/tsconfig-generate-types.web.json
@@ -9,7 +9,8 @@
     "**/**.stories.tsx",
     "**/**.stories.internal.tsx",
     "**/**.native.ts",
-    "**/**.native.tsx"
+    "**/**.native.tsx",
+    "**/ThemePlayground/**.tsx"
   ],
   "compilerOptions": {
     "declarationDir": "build/types/web",
