--- a/packages/blade/tsconfig-generate-types.native.json
+++ b/packages/blade/tsconfig-generate-types.native.json
@@ -9,7 +9,8 @@
     "**/**.stories.tsx",
     "**/**.stories.internal.tsx",
     "**/**.web.ts",
-    "**/**.web.tsx"
+    "**/**.web.tsx",
+    "**/ThemePlayground/**.tsx"
   ],
   "compilerOptions": {
     "declarationDir": "build/types/native",
