--- a/packages/examples/basic/package.json
+++ b/packages/examples/basic/package.json
@@ -2,14 +2,14 @@
   "private": "true",
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
-    "build": "yarn build && yarn build:app",
+    "build": "yarn build:blade && yarn build:app",
     "build:blade": "cd ../../blade && yarn build",
     "build:app": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "analyze:only": "source-map-explorer 'build/static/js/*.js' --gzip",
     "analyze": "yarn build && yarn analyze:only"
   },
   "dependencies": {
-    "@razorpay/blade": "../../blade/build/",
+    "@razorpay/blade": "10.15.1",
     "@fontsource/lato": "^4.5.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
