--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -114,7 +114,15 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "patch-package": "7.0.0"
+    "@babel/runtime": "7.20.0",
+    "@types/body-scroll-lock": "3.1.0",
+    "@use-gesture/react": "10.2.24",
+    "body-scroll-lock": "4.0.0-beta.0",
+    "use-presence": "1.1.0",
+    "@floating-ui/react": "0.24.2",
+    "@floating-ui/react-native": "0.10.0",
+    "patch-package": "7.0.0",
+    "tinycolor2": "1.6.0"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -219,13 +227,7 @@
     "react-native-safe-area-context": "3.4.1",
     "ttypescript": "1.5.15",
     "typescript-transform-paths": "3.4.6",
-    "@babel/runtime": "7.20.0",
-    "@use-gesture/react": "10.2.24",
-    "body-scroll-lock": "4.0.0-beta.0",
-    "use-presence": "1.1.0",
-    "@floating-ui/react": "0.24.2",
-    "@floating-ui/react-native": "0.10.0",
-    "tinycolor2": "1.6.0"
+    "@babel/runtime": "7.20.0"
   },
   "peerDependencies": {
     "@gorhom/bottom-sheet": "^4",
