--- a/packages/examples/basic/package.json
+++ b/packages/examples/basic/package.json
@@ -9,17 +9,22 @@
     "analyze": "yarn build && yarn analyze:only"
   },
   "dependencies": {
-    "@razorpay/blade": "10.15.1",
+    "@razorpay/blade": "https://pkg.csb.dev/razorpay/blade/commit/c0cfd96a/@razorpay/blade",
     "@fontsource/lato": "^4.5.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "source-map-explorer": "2.5.3"
+    "source-map-explorer": "2.5.3",
+    "tinycolor2": "1.6.0",
+    "use-presence": "1.1.0",
+    "body-scroll-lock": "4.0.0-beta.0",
+    "@floating-ui/react": "0.24.2",
+    "@use-gesture/react": "10.2.24"
   },
   "browserslist": {
     "production": [
