--- a/packages/examples/basic/package.json
+++ b/packages/examples/basic/package.json
@@ -9,7 +9,7 @@
     "analyze": "yarn build && yarn analyze:only"
   },
   "dependencies": {
-    "@razorpay/blade": "https://pkg.csb.dev/razorpay/blade/commit/c0cfd96a/@razorpay/blade",
+    "@razorpay/blade": "10.15.1",
     "@fontsource/lato": "^4.5.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
