--- a/packages/blade/tsconfig-generate-types.native.json
+++ b/packages/blade/tsconfig-generate-types.native.json
@@ -10,7 +10,7 @@
     "**/**.stories.internal.tsx",
     "**/**.web.ts",
     "**/**.web.tsx",
-    "**/ThemePlayground/**.tsx"
+    "**/ThemePlayground/**/**.tsx"
   ],
   "compilerOptions": {
     "declarationDir": "build/types/native",
