--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -122,7 +122,9 @@
     "@floating-ui/react": "0.26.0",
     "@floating-ui/react-native": "0.10.1",
     "patch-package": "7.0.0",
-    "tinycolor2": "1.6.0"
+    "tinycolor2": "1.6.0",
+    "react-native-tab-view": "3.5.2",
+    "react-native-pager-view": "6.2.1"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -160,6 +162,8 @@
     "@storybook/preset-create-react-app": "3.2.0",
     "@storybook/react": "6.5.16",
     "@storybook/react-native": "6.5.5",
+    "storybook-react-router": "1.0.8",
+    "react-router-dom": "5.3.4",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react": "13.4.0",
@@ -179,6 +183,8 @@
     "@types/styled-components": "5.1.25",
     "@types/styled-components-react-native": "5.1.3",
     "@types/tinycolor2": "1.4.3",
+    "@types/react-router-dom": "5.3.3",
+    "@types/storybook-react-router": "1.0.5",
     "any-leaf": "1.2.2",
     "args-parser": "1.3.0",
     "babel-jest": "29.6.1",
@@ -213,6 +219,8 @@
     "react-native-gesture-handler": "2.9.0",
     "react-native-reanimated": "3.4.1",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "3.5.2",
+    "react-native-pager-view": "6.2.1",
     "react-scripts": "4.0.3",
     "react-test-renderer": "18.2.0",
     "rollup": "3.28.1",
@@ -237,6 +245,8 @@
     "react-dom": ">=18",
     "react-native": "^0.72",
     "react-native-reanimated": "^3.4.1",
+    "react-native-tab-view": "3.5.2",
+    "react-native-pager-view": "6.2.1",
     "react-native-svg": "^12.3.0",
     "styled-components": "^5",
     "react-native-gesture-handler": "^2.9.0"
