fix(blade): fixed scripts for project setup in Windows
Added 'set' keyword in scripts to add env variables and values during script execution

Used escape character to remove extra space character that was getting appended to env variable value

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -86,24 +86,24 @@
     "types:copy-declarations:native": "copyfiles -u 1 \"src/**/*.d.ts\" build/types/native",
     "build:generate-root-imports": "rollup -c && node ./scripts/generateRootImports.js",
     "build:clean-declarations": "rm -rf build/types",
-    "build:react-dev": "FRAMEWORK=REACT NODE_ENV=development rollup -c",
-    "build:react-prod": "FRAMEWORK=REACT NODE_ENV=production rollup -c",
-    "build:react-native": "FRAMEWORK=REACT_NATIVE rollup -c",
-    "build:generate-css-variables": "GENERATE_CSS_VARIABLES=true FRAMEWORK=REACT rollup -c && node ./scripts/generateCssThemeVariables.js",
+    "build:react-dev": "set \"FRAMEWORK=REACT\" && set \"NODE_ENV=development\" && rollup -c",
+    "build:react-prod": "set \"FRAMEWORK=REACT\" && set \"NODE_ENV=production\" && rollup -c",
+    "build:react-native": "set \"FRAMEWORK=REACT_NATIVE\" && rollup -c",
+    "build:generate-css-variables": "set \"GENERATE_CSS_VARIABLES=true\" && set \"FRAMEWORK=REACT\" && rollup -c && node ./scripts/generateCssThemeVariables.js",
     "build:clean-theme-bundle": "rm -rf build/js-bundle-for-css",
     "react-native:get-stories": "sb-rn-get-stories --config-path=./.storybook/react-native && yarn prettier --write ./.storybook/react-native/storybook.requires.js",
-    "react-native:storybook:android": "yarn react-native:get-stories && FRAMEWORK=REACT_NATIVE react-native run-android",
-    "react-native:storybook:ios": "yarn react-native:get-stories && FRAMEWORK=REACT_NATIVE react-native run-ios",
-    "react-native:storybook:start": "yarn react-native:get-stories && NODE_OPTIONS=--openssl-legacy-provider FRAMEWORK=REACT_NATIVE react-native start --reset-cache",
+    "react-native:storybook:android": "yarn react-native:get-stories && set \"FRAMEWORK=REACT_NATIVE\" && react-native run-android",
+    "react-native:storybook:ios": "yarn react-native:get-stories && set \"FRAMEWORK=REACT_NATIVE\" && react-native run-ios",
+    "react-native:storybook:start": "yarn react-native:get-stories && set \"NODE_OPTIONS=--openssl-legacy-provider\" && set \"FRAMEWORK=REACT_NATIVE\" && react-native start --reset-cache",
     "react": "yarn run react:storybook",
-    "react:storybook": "NODE_OPTIONS=--openssl-legacy-provider FRAMEWORK=REACT start-storybook -c ./.storybook/react -p 9009",
-    "react:storybook:build": "NODE_OPTIONS=--openssl-legacy-provider FRAMEWORK=REACT build-storybook -c ./.storybook/react -o storybook-site",
-    "test:react": "FRAMEWORK=REACT jest -c ./jest.web.config.js --shard=$SHARD --forceExit",
-    "test:react-native": "FRAMEWORK=REACT_NATIVE jest -c ./jest.native.config.js --shard=$SHARD --forceExit",
-    "start:ios": "NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:ios",
-    "start:android": "NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:android",
-    "start:native": "NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:android react-native:storybook:ios",
-    "start:web": "NODE_OPTIONS=--openssl-legacy-provider yarn react",
+    "react:storybook": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && set \"FRAMEWORK=REACT\" && start-storybook -c ./.storybook/react -p 9009",
+    "react:storybook:build": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && set \"FRAMEWORK=REACT\" && build-storybook -c ./.storybook/react -o storybook-site",
+    "test:react": "set \"FRAMEWORK=REACT\" && jest -c ./jest.web.config.js --shard=$SHARD --forceExit",
+    "test:react-native": "set \"FRAMEWORK=REACT_NATIVE\" && jest -c ./jest.native.config.js --shard=$SHARD --forceExit",
+    "start:ios": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && run-p react-native:storybook:start react-native:storybook:ios",
+    "start:android": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && run-p react-native:storybook:start react-native:storybook:android",
+    "start:native": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && run-p react-native:storybook:start react-native:storybook:android react-native:storybook:ios",
+    "start:web": "set \"NODE_OPTIONS=--openssl-legacy-provider\" && yarn react",
     "start:all": "run-p start:native start:web",
     "watch:test": "run-p watch:test:*",
     "watch:test:react": "yarn test:react --watch --onlyChanged",
