--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -129,7 +129,7 @@
     "use-presence": "1.1.0"
   },
   "devDependencies": {
-    "chromatic": "6.22.0",
+    "chromatic": "6.22.0"
     "@babel/core": "7.20.2",
     "@babel/plugin-transform-react-jsx": "7.16.5",
     "@babel/plugin-transform-runtime": "7.16.5",
