--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -27,3 +27,4 @@ jobs:
           debug: true
           review_simple_changes: false
           review_comment_lgtm: false
+          openai_heavy_model: 'gpt-3.5-turbo'
