--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -122,7 +122,8 @@
     "@floating-ui/react": "0.24.2",
     "@floating-ui/react-native": "0.10.0",
     "patch-package": "7.0.0",
-    "tinycolor2": "1.6.0"
+    "tinycolor2": "1.6.0",
+    "@table-library/react-table-library": "4.1.7"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -133,6 +134,7 @@
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
     "@codesandbox/sandpack-react": "1.16.0",
+    "@emotion/react": "11.11.1",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@react-native/metro-config": "0.72.9",
