--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -135,6 +135,9 @@
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
     "@codesandbox/sandpack-react": "1.16.0",
+    "@okikio/emitter": "2.1.7",
+    "@typescript/vfs": "1.3.5",
+    "debounce-async": "0.0.2",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@react-native/metro-config": "0.72.9",
