random commit to save code. nothing is working

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -105,6 +105,7 @@
     "start:native": "cross-env NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:android react-native:storybook:ios",
     "start:web": "cross-env NODE_OPTIONS=--openssl-legacy-provider yarn react",
     "start:all": "run-p start:native start:web",
+    "watch:webworker": "npx esbuild --target=ES2021 --watch public/workers/tsserver.ts --bundle --outfile=public/workers/tsserver.js",
     "watch:test": "run-p watch:test:*",
     "watch:test:react": "yarn test:react --watch --onlyChanged",
     "watch:test:react-native": "yarn test:react-native --watch --onlyChanged",
@@ -134,9 +135,9 @@
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
-    "@codesandbox/sandpack-react": "1.16.0",
+    "@codesandbox/sandpack-react": "1.17.0",
     "@okikio/emitter": "2.1.7",
-    "@typescript/vfs": "1.3.5",
+    "@typescript/vfs": "1.5.0",
     "debounce-async": "0.0.2",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
