feat: add working monaco editor

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -137,6 +137,7 @@
     "@codesandbox/sandpack-react": "1.16.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
+    "@monaco-editor/react": "4.4.0",
     "@react-native/metro-config": "0.72.9",
     "@react-native-async-storage/async-storage": "1.19.1",
     "@react-native-community/datetimepicker": "5.0.1",
@@ -211,11 +212,14 @@
     "jsdom": "20.0.2",
     "lodash": "4.17.21",
     "metro-react-native-babel-preset": "0.76.7",
+    "monaco-editor": "0.44.0",
+    "monaco-editor-webpack-plugin": "7.1.0",
     "moniker": "0.1.2",
     "npm-run-all": "4.1.5",
     "outdent": "0.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-monaco-editor": "0.54.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "2.9.0",
     "react-native-reanimated": "3.4.1",
