--- a/packages/blade/tsconfig.json
+++ b/packages/blade/tsconfig.json
@@ -12,7 +12,7 @@
     },
     // In Blade side we are targeting `.web` types
     // We can't add both `.native` & `.web` at once.
-    "moduleSuffixes": [".all", ".web", ""],
+    "moduleSuffixes": [".all", ".native", ""],
     "plugins": [
       // TODO: Replace ttypescript when official compiler transforms are supported https://github.com/microsoft/TypeScript/issues/54276
       // Transform paths in output .d.ts files
