--- a/packages/plugin-figma-blade-coverage/.vscode/settings.json
+++ b/packages/plugin-figma-blade-coverage/.vscode/settings.json
@@ -4,5 +4,19 @@
       "fileMatch": ["package.json"],
       "url": "https://yuanqing.github.io/create-figma-plugin/figma-plugin.json"
     }
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.options": {
+    "extensions": [".js", ".jsx", ".md", ".mdx", ".ts", ".tsx"]
+  },
+  "eslint.validate": [
+    "markdown",
+    "mdx",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
   ]
 }
