--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -147,6 +147,7 @@
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-replace": "5.0.2",
     "@size-limit/preset-big-lib": "8.2.4",
+    "@stackblitz/sdk": "1.9.0",
     "@storybook/addon-a11y": "6.5.16",
     "@storybook/addon-actions": "6.5.16",
     "@storybook/addon-controls": "6.5.16",
