--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -114,6 +114,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "scrollyfills": "1.0.0",
     "@babel/runtime": "7.20.0",
     "@types/body-scroll-lock": "3.1.0",
     "@use-gesture/react": "10.2.24",
