--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -34,6 +34,9 @@
   ],
   "main": "./build/components/index.web.js",
   "exports": {
+    "./fonts.css": {
+      "default": "./fonts.css"
+    },
     "./components": {
       "react-native": {
         "types": "./build/components/index.native.d.ts",
