--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -10,7 +10,7 @@ on:
     types: [created]
 
 env:
-  GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.CI_BOT_TOKEN }}
   OPENAI_API_KEY: ${{ secrets.OPENAI_CODEREVIEW_SECRET }}
 
 concurrency:
