--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -8,10 +8,9 @@ on:
   pull_request:
   pull_request_review_comment:
     types: [created]
-
+    
 env:
   GITHUB_TOKEN: ${{ secrets.CI_BOT_TOKEN }}
-  OPENAI_API_KEY: ${{ secrets.OPENAI_CODEREVIEW_SECRET }}
 
 concurrency:
   group: ${{ github.repository }}-${{ github.event.number || github.head_ref ||
@@ -23,14 +22,9 @@ jobs:
   review:
     runs-on: ubuntu-latest # nosemgrep: non-self-hosted-runner
     steps:
-      # - uses: razorpay/create-github-app-token@v1
-      #   name: Generate Github Token
-      #   id: app-token
-      #   with:
-      #     app-id: ${{ secrets.WORKFLOWGATEKEEPER_APP_ID }}
-      #     private-key: ${{ secrets.WORKFLOWGATEKEEPER_PRIVATEKEY }}
-      #     repositories: "goutils,error-mapping-module,proto,partnerships"
       - uses: KUNAL13/ai-pr-reviewer@main
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_CODEREVIEW_SECRET }}
         with:
           debug: true
           openai_base_url: https://devproductivity-codereview.openai.azure.com/openai/deployments/CodeReviewerGPT4
