--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -125,7 +125,7 @@
     "tinycolor2": "1.6.0",
     "react-native-tab-view": "3.5.2",
     "react-native-pager-view": "6.2.1",
-    "i18nify": "github:razorpay/i18nify#currency-module-deploy-09-nov-2023"
+    "i18nify": "github:razorpay/i18nify#master-build"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
