--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -75,6 +75,7 @@
     "prepare": "yarn build",
     "build": "run-s build:*",
     "clearCache": "jest --clearCache",
+    "quickbuild": "yarn build:clean && yarn build:react-prod",
     "build:clean": "rm -rf build",
     "build:generate-types": "run-s types:generate-types:*",
     "build:copy-declarations": "run-s types:copy-declarations:*",
@@ -88,8 +89,6 @@
     "build:clean-declarations": "rm -rf build/types",
     "build:react-dev": "cross-env FRAMEWORK=REACT NODE_ENV=development rollup -c",
     "build:react-prod": "cross-env FRAMEWORK=REACT NODE_ENV=production rollup -c",
-    "build:react-native": "cross-env FRAMEWORK=REACT_NATIVE rollup -c",
-    "build:generate-css-variables": "cross-env GENERATE_CSS_VARIABLES=true FRAMEWORK=REACT rollup -c && node ./scripts/generateCssThemeVariables.js",
     "build:clean-theme-bundle": "rm -rf build/js-bundle-for-css",
     "react-native:get-stories": "sb-rn-get-stories --config-path=./.storybook/react-native && yarn prettier --write ./.storybook/react-native/storybook.requires.js",
     "react-native:storybook:android": "yarn react-native:get-stories && cross-env FRAMEWORK=REACT_NATIVE react-native run-android",
@@ -128,6 +127,7 @@
   },
   "devDependencies": {
     "chromatic": "6.22.0",
+    "@babel/cli": "7.23.0",
     "@babel/core": "7.20.2",
     "@babel/plugin-transform-react-jsx": "7.16.5",
     "@babel/plugin-transform-runtime": "7.16.5",
