--- a/packages/token-publisher/manifest.json
+++ b/packages/token-publisher/manifest.json
@@ -4,5 +4,10 @@
   "api": "1.0.0",
   "main": "dist/plugin.js",
   "ui": "dist/ui.html",
-  "editorType": ["figma"]
+  "editorType": ["figma"],
+  "menu": [
+    { "name": "Publish Global Color Tokens", "command": "globalColorTokens" },
+    { "name": "Publish Theme Color Tokens", "command": "themeColorTokens" },
+    { "name": "Generate Token's Dev Names", "command": "devTokenNames" }
+  ]
 }
