--- a/packages/blade/tsconfig-generate-types.native.json
+++ b/packages/blade/tsconfig-generate-types.native.json
@@ -13,7 +13,7 @@
     "**/ThemePlayground/**/**.tsx"
   ],
   "compilerOptions": {
-    "declarationDir": "build/types/native",
+    "declarationDir": "build/generated-types/native",
     "moduleSuffixes": [".native", ""]
   }
 }
