--- a/packages/blade/tsconfig-generate-types.web.json
+++ b/packages/blade/tsconfig-generate-types.web.json
@@ -13,7 +13,7 @@
     "**/ThemePlayground/**/**.tsx"
   ],
   "compilerOptions": {
-    "declarationDir": "build/types/web",
+    "declarationDir": "build/generated-types/web",
     "moduleSuffixes": [".web", ""]
   }
 }
