--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -187,6 +187,7 @@
     "@types/tinycolor2": "1.4.3",
     "@types/react-router-dom": "5.3.3",
     "@types/storybook-react-router": "1.0.5",
+    "@table-library/react-table-library": "4.1.7",
     "any-leaf": "1.2.2",
     "args-parser": "1.3.0",
     "babel-jest": "29.6.1",
