--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -135,6 +135,7 @@
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
     "@codesandbox/sandpack-react": "1.16.0",
+    "@emotion/react": "11.11.1",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@react-native/metro-config": "0.72.9",
@@ -186,6 +187,7 @@
     "@types/tinycolor2": "1.4.3",
     "@types/react-router-dom": "5.3.3",
     "@types/storybook-react-router": "1.0.5",
+    "@table-library/react-table-library": "4.1.7",
     "any-leaf": "1.2.2",
     "args-parser": "1.3.0",
     "babel-jest": "29.6.1",
@@ -239,6 +241,8 @@
     "typescript-transform-paths": "3.4.6"
   },
   "peerDependencies": {
+    "@table-library/react-table-library": "^4.1.7",
+    "@emotion/react": "^11.11.1",
     "@gorhom/bottom-sheet": "^4",
     "@gorhom/portal": "1.0.14",
     "@floating-ui/react": "0.25.4",
@@ -261,6 +265,12 @@
       "optional": true
     },
     "@gorhom/bottom-sheet": {
+      "optional": true
+    },
+    "@table-library/react-table-library": {
+      "optional": true
+    },
+    "@emotion/react": {
       "optional": true
     }
   },
