--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -115,16 +115,18 @@
   },
   "dependencies": {
     "@babel/runtime": "7.20.0",
+    "@emotion/react": "11.11.1",
+    "@floating-ui/react-native": "0.10.1",
+    "@floating-ui/react": "0.25.4",
+    "@table-library/react-table-library": "4.1.7",
     "@types/body-scroll-lock": "3.1.0",
     "@use-gesture/react": "10.2.24",
     "body-scroll-lock": "4.0.0-beta.0",
-    "use-presence": "1.1.0",
-    "@floating-ui/react": "0.25.4",
-    "@floating-ui/react-native": "0.10.1",
     "patch-package": "7.0.0",
-    "tinycolor2": "1.6.0",
+    "react-native-pager-view": "6.2.1",
     "react-native-tab-view": "3.5.2",
-    "react-native-pager-view": "6.2.1"
+    "tinycolor2": "1.6.0",
+    "use-presence": "1.1.0"
   },
   "devDependencies": {
     "chromatic": "6.22.0",
@@ -135,7 +137,6 @@
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
     "@codesandbox/sandpack-react": "1.16.0",
-    "@emotion/react": "11.11.1",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@react-native/metro-config": "0.72.9",
@@ -187,7 +188,6 @@
     "@types/tinycolor2": "1.4.3",
     "@types/react-router-dom": "5.3.3",
     "@types/storybook-react-router": "1.0.5",
-    "@table-library/react-table-library": "4.1.7",
     "any-leaf": "1.2.2",
     "args-parser": "1.3.0",
     "babel-jest": "29.6.1",
@@ -241,8 +241,6 @@
     "typescript-transform-paths": "3.4.6"
   },
   "peerDependencies": {
-    "@table-library/react-table-library": "^4.1.7",
-    "@emotion/react": "^11.11.1",
     "@gorhom/bottom-sheet": "^4",
     "@gorhom/portal": "1.0.14",
     "@floating-ui/react": "0.25.4",
@@ -265,12 +263,6 @@
       "optional": true
     },
     "@gorhom/bottom-sheet": {
-      "optional": true
-    },
-    "@table-library/react-table-library": {
-      "optional": true
-    },
-    "@emotion/react": {
       "optional": true
     }
   },
@@ -321,14 +313,14 @@
       "name": "Import Button only",
       "path": "./build/components/index.production.web.js",
       "import": "{ Button }",
-      "limit": "20 kb",
+      "limit": "30 kb",
       "running": false
     },
     {
       "name": "Import Text only",
       "path": "./build/components/index.production.web.js",
       "import": "{ Text }",
-      "limit": "15 kb",
+      "limit": "25 kb",
       "running": false
     }
   ]
