--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -154,6 +154,7 @@
     "@floating-ui/react-native": "0.10.0",
     "react-native-tab-view": "3.5.2",
     "react-native-pager-view": "6.2.1",
+    "@hypermod/utils": "0.4.2",
     "@react-native/metro-config": "0.72.9",
     "@react-native-async-storage/async-storage": "1.19.1",
     "@react-native-community/datetimepicker": "5.0.1",
